index.html footer

--- a/index.html
+++ b/index.html
@@ -229,10 +229,173 @@
           </div>
         </div>
       </section>
+
+      <section id="help-team">
+        <div class="container">
+          <h2 class="section-header">My Help Team</h2>
+          <div class="team-container">
+            <div class="team-member">
+              <img
+                src="./materials/images/team_1.jpg"
+                alt="Woman taking a picture with a camera and a protection mask"
+              />
+              <h3>Joana Beach</h3>
+              <p>Senior Software Engineer</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="./materials/images/team_2.jpg"
+                alt="Men with grey suit smiling"
+              />
+              <h3>Jhon Deep</h3>
+              <p>SEO specialist</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="./materials/images/team_3.jpg"
+                alt="Man with shirt looking to the left"
+              />
+              <h3>Juan Sanchez</h3>
+              <p>Web seller</p>
+            </div>
+            <div class="team-member">
+              <img
+                src="./materials/images/team_4.jpg"
+                alt="Woman with red hair smiling"
+              />
+              <h3>Ramia Nadjela</h3>
+              <p>Layaut specialist</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-      <div class="container">footer</div>
+      <div class="container">
+        <h2>My social networks</h2>
+        <h2>Email newsletter</h2>
+        <h2>Images of the day</h2>
+        <div class="social-container">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor
+            turpis, nullam congue convallis montes purus class tristique mollis
+            velit, posuere libero netus sodales dictum habitasse cubilia odio.
+          </p>
+          <p>
+            Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
+            senectus consequat montes a ridiculus elementum natoque habitasse,
+            volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
+            nascetur nibh mauris... []
+          </p>
+
+          <div class="social-icons">
+            <i class="fa-brands fa-dribbble"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-google-plus-g"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-vk"></i>
+          </div>
+        </div>
+        <div class="email-newsletter">
+          <p>Sign up for our email newsletter to find out all the news.</p>
+          <form>
+            <input type="text" name="name" placeholder="Name" />
+            <input type="email" name="email" placeholder="Email" />
+            <button type="submit">SUBMIT</button>
+          </form>
+        </div>
+
+        <div class="gallery">
+          <div class="grid-container">
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_1.jpg"
+                alt="Ocean View"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_2.jpg"
+                alt="Lavender Fields"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_3.jpg"
+                alt="Drawing Hands"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_4.jpg"
+                alt="Forest at Sunrise"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_5.jpg"
+                alt="Terrarium"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_6.jpg"
+                alt="Network Visualization"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_7.jpg"
+                alt="Hillside Under Cloudy Sky"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_8.jpg"
+                alt="Building Facade"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_9.jpg"
+                alt="Sunset Sky"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container footer-contact">
+        <div class="contact-item">
+          <i class="fa-solid fa-phone"></i>
+          <div class="contact-data">
+            <p>Give us a call:</p>
+            <p>+00 (123) 765 8765</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-envelope"></i>
+          <div class="contact-data">
+            <p>Send us a mail:</p>
+            <p>myName@domain.com</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-clock"></i>
+          <div class="contact-data">
+            <p>Monday - Saturday:</p>
+            <p>14.00am - 18.00pm</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="contact-data">
+            <p>Come visit us:</p>
+            <p>Directions to my location</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
