index.html structure

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Travel with UOC</title>
+    <title>Adit Sanika | Portfolio</title>
     <link
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Yellowtail&display=swap"
       rel="stylesheet"
@@ -25,8 +25,8 @@
           </div>
           <div id="nav-links">
             <ul>
-              <li><a href="#">HOME</a></li>
-              <li><a href="#">MULTIFACETED</a></li>
+              <li><a id="home-button" href="#">HOME</a></li>
+              <li><a id="multi-button" href="#">MULTIFACETED</a></li>
               <li><a a href="#">PRICING</a></li>
               <li><a href="#">BLOG</a></li>
               <li><a href="#">CONTACT</a></li>
@@ -132,19 +132,23 @@
                   and user-friendly websites. In today's fast-paced digital
                   world, a well-designed website is like a virtual storefront,
                   attracting visitors and converting them into customers.
-                  <a href="#">Read more...</a>
+                  <a class="read-more" href="#">Read more...</a>
                 </p>
               </div>
             </div>
 
             <div class="latest-article">
               <div class="latest-article-content">
-                <h3><a href="#">22 inspiring web design trends for 2022</a></h3>
+                <h3>
+                  <a class="read-more" href="#"
+                    >22 inspiring web design trends for 2022</a
+                  >
+                </h3>
                 <p>
                   We're a bit biased here but we're still thankful for this
                   comprehensive look at upcoming web design trends! This article
                   covers a variety of design styles that...
-                  <a href="#">Read more...</a>
+                  <a class="read-more" href="#">Read more...</a>
                 </p>
               </div>
               <img
@@ -168,7 +172,7 @@
                   Author Ben Barnhart breaks down the defining characteristics
                   of glitch art, sharing examples of elements like pixelation,
                   light leaks, and color degradation.
-                  <a href="link-to-article3">Read more...</a>
+                  <a class="read-more" href="link-to-article3">Read more...</a>
                 </p>
               </div>
             </div>
@@ -286,7 +290,7 @@
             Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
             senectus consequat montes a ridiculus elementum natoque habitasse,
             volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
-            nascetur nibh mauris... []
+            nascetur nibh mauris...[ &rarr; ]
           </p>
 
           <div class="social-icons">
@@ -368,31 +372,31 @@
       </div>
       <div class="container footer-contact">
         <div class="contact-item">
-          <i class="fa-solid fa-phone"></i>
+          <i class="fa-solid fa-phone-flip"></i>
           <div class="contact-data">
-            <p>Give us a call:</p>
-            <p>+00 (123) 765 8765</p>
+            <p class="contact-header">Give Us A call:</p>
+            <p class="contact">+00 (123) 765 8765</p>
           </div>
         </div>
         <div class="contact-item">
           <i class="fa-solid fa-envelope"></i>
           <div class="contact-data">
-            <p>Send us a mail:</p>
-            <p>myName@domain.com</p>
+            <p class="contact-header">Send Us A Mail:</p>
+            <p class="contact">myName@domain.com</p>
           </div>
         </div>
         <div class="contact-item">
           <i class="fa-solid fa-clock"></i>
           <div class="contact-data">
-            <p>Monday - Saturday:</p>
-            <p>14.00am - 18.00pm</p>
+            <p class="contact-header">Monday - Saturday:</p>
+            <p class="contact">14.00am - 18.00pm</p>
           </div>
         </div>
         <div class="contact-item">
           <i class="fa-solid fa-location-dot"></i>
           <div class="contact-data">
-            <p>Come visit us:</p>
-            <p>Directions to my location</p>
+            <p class="contact-header">Come Visit Us:</p>
+            <p class="contact">Directions to my location</p>
           </div>
         </div>
       </div>
