--- a/PRA/index.html
+++ b/PRA/index.html
@@ -25,11 +25,22 @@
           </div>
           <div id="nav-links">
             <ul>
-              <li><a id="home-button" href="#">HOME</a></li>
-              <li><a id="multi-button" href="#">MULTIFACETED</a></li>
-              <li><a a href="#">PRICING</a></li>
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">CONTACT</a></li>
+              <li>
+                <a id="home-button" class="glow-on-hover" href="./index.html"
+                  >HOME</a
+                >
+              </li>
+              <li>
+                <a
+                  id="multi-button"
+                  class="glow-on-hover"
+                  href="./multifaceted.html"
+                  >MULTIFACETED</a
+                >
+              </li>
+              <li><a class="glow-on-hover" href="#">PRICING</a></li>
+              <li><a class="glow-on-hover" href="#">BLOG</a></li>
+              <li><a class="glow-on-hover" href="#">CONTACT</a></li>
             </ul>
           </div>
         </div>
