--- a/PRA/index.html
+++ b/PRA/index.html
@@ -81,7 +81,7 @@
               />
               <h4>Programming</h4>
               <p>Here you can see some of my programming work</p>
-              <a href="#" class="card-link">MORE DETAILS</a>
+              <a class="glow-on-hover" href="#">MORE DETAILS</a>
             </div>
             <div class="experience-item">
               <img
@@ -91,7 +91,7 @@
               />
               <h4>Web layout</h4>
               <p>Here you can see some of my work as a web designer</p>
-              <a href="#" class="card-link">MORE DETAILS</a>
+              <a class="glow-on-hover" href="#">MORE DETAILS</a>
             </div>
             <div class="experience-item">
               <img
@@ -101,7 +101,7 @@
               />
               <h4>Design</h4>
               <p>Here you can see some of my work as a designer</p>
-              <a href="#" class="card-link">MORE DETAILS</a>
+              <a class="glow-on-hover" href="#">MORE DETAILS</a>
             </div>
             <div class="experience-item">
               <img
@@ -111,7 +111,7 @@
               />
               <h4>Painting</h4>
               <p>Here you can see some of my work as a painter</p>
-              <a href="#" class="card-link">MORE DETAILS</a>
+              <a class="glow-on-hover" href="#">MORE DETAILS</a>
               <div class="latest-container">
                 <div class="latest-item"></div>
               </div>
@@ -124,7 +124,7 @@
         <div class="container">
           <div id="latest-header">
             <h2 class="section-header">Latest from our Blog</h2>
-            <a href="#" class="card-link">MORE ARTICLES</a>
+            <a class="glow-on-hover" href="#">MORE ARTICLES</a>
           </div>
           <div class="latest-container">
             <div class="latest-article">
@@ -134,7 +134,7 @@
               />
               <div class="latest-article-content">
                 <h3>
-                  <a href="./web-design.html"
+                  <a class="link" href="./web-design.html"
                     >Web Design: Shaping the Digital Experience</a
                   >
                 </h3>
@@ -143,7 +143,7 @@
                   and user-friendly websites. In today's fast-paced digital
                   world, a well-designed website is like a virtual storefront,
                   attracting visitors and converting them into customers.
-                  <a class="read-more" href="#">Read more...</a>
+                  <a class="link read-more" href="#">Read more...</a>
                 </p>
               </div>
             </div>
@@ -151,7 +151,7 @@
             <div class="latest-article">
               <div class="latest-article-content">
                 <h3>
-                  <a class="read-more" href="#"
+                  <a class="link read-more" href="#"
                     >22 inspiring web design trends for 2022</a
                   >
                 </h3>
@@ -159,7 +159,7 @@
                   We're a bit biased here but we're still thankful for this
                   comprehensive look at upcoming web design trends! This article
                   covers a variety of design styles that...
-                  <a class="read-more" href="#">Read more...</a>
+                  <a class="link read-more" href="#">Read more...</a>
                 </p>
               </div>
               <img
@@ -175,7 +175,7 @@
               />
               <div class="latest-article-content">
                 <h3>
-                  <a href="#"
+                  <a class="link" href="#"
                     >Break the Internet: The Rising Popularity of Glitch Art</a
                   >
                 </h3>
@@ -183,7 +183,9 @@
                   Author Ben Barnhart breaks down the defining characteristics
                   of glitch art, sharing examples of elements like pixelation,
                   light leaks, and color degradation.
-                  <a class="read-more" href="link-to-article3">Read more...</a>
+                  <a class="link read-more" href="link-to-article3"
+                    >Read more...</a
+                  >
                 </p>
               </div>
             </div>
@@ -305,12 +307,40 @@
           </p>
 
           <div class="social-icons">
-            <i class="fa-brands fa-dribbble"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-google-plus-g"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-vk"></i>
+            <a
+              href="https://www.dribbble.com"
+              target="_blank"
+              aria-label="Dribbble"
+            >
+              <i class="fa-brands fa-dribbble"></i>
+            </a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a
+              href="https://plus.google.com"
+              target="_blank"
+              aria-label="Google Plus"
+            >
+              <i class="fa-brands fa-google-plus-g"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://vk.com" target="_blank" aria-label="VK">
+              <i class="fa-brands fa-vk"></i>
+            </a>
           </div>
         </div>
         <div class="email-newsletter">
