--- a/PRA/web-design.html
+++ b/PRA/web-design.html
@@ -1,160 +1,244 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Adit Sanika | Web Design</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700%7CYellowtail&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/web-design_styles.css">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700%7CYellowtail&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/web-design_styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <div class="container">
-                <div id="nav-logo">
-                    <a href="index.html">
-                        <img src="./materials/images/logo.svg" alt="Logo Principal">
-                    </a>
-                </div>
-                <div id="nav-links">
-                    <ul>
-                        <li>
-                            <a class="glow-on-hover" href="./index.html">HOME</a>
-                        </li>
-                        <li>
-                            <a class="glow-on-hover" href="./multifaceted.html">MULTIFACETED</a>
-                        </li>
-                        <li><a class="glow-on-hover" href="#">PRICING</a></li>
-                        <li><a class="glow-on-hover" href="#">BLOG</a></li>
-                        <li><a class="glow-on-hover" href="#">CONTACT</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav>
+        <div class="container">
+          <div id="nav-logo">
+            <a href="index.html">
+              <img src="./materials/images/logo.svg" alt="Logo Principal" />
+            </a>
+          </div>
+          <div id="nav-links">
+            <ul>
+              <li>
+                <a class="glow-on-hover" href="./index.html">HOME</a>
+              </li>
+              <li>
+                <a class="glow-on-hover" href="./multifaceted.html"
+                  >MULTIFACETED</a
+                >
+              </li>
+              <li><a class="glow-on-hover" href="#">PRICING</a></li>
+              <li><a class="glow-on-hover" href="#">BLOG</a></li>
+              <li><a class="glow-on-hover" href="#">CONTACT</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section id="presentation">
+        <div class="principal">
+          <h1>Adit Sanika Namrata</h1>
+          <p>My work as a designer.</p>
+        </div>
+      </section>
     </header>
 
     <main>
-        <h1>TBD</h1>
-    </main>
-    <aside>
+      <article>
+        <section id=""></section>
+      </article>
+      <aside>
         <h2>More on my blog</h2>
-
-    </aside>
+        <div class="aside-list">
+          <h3>More resources</h3>
+          <ul>
+            <li><a href="#">Web Design: Shaping the Digital Experience</a></li>
+            <li><a href="#">Web Design: All about</a></li>
+            <li><a href="#">Web Design: I'm the best</a></li>
+          </ul>
+        </div>
+        <div class="aside-list">
+          <h3>More resources</h3>
+          <ul>
+            <li><a href="#">A Simple Web Developer’s Guide To Color</a></li>
+            <li><a href="#">The Code Side Of Color</a></li>
+            <li><a href="#">Color Meanings</a></li>
+            <li><a href="#">Color Meanings & Symbolism</a></li>
+          </ul>
+        </div>
+        <div>
+          <h3>Explore more on</h3>
+          <div class="explore-button-container">
+            <a href="#" class="explore-button">Programming</a>
+            <a href="#" class="explore-button">Web layout</a>
+            <a href="#" class="explore-button">Design</a>
+            <a href="#" class="explore-button">Painting</a>
+            <a href="#" class="explore-button">Gaming</a>
+            <a href="#" class="explore-button">Reading</a>
+          </div>
+        </div>
+      </aside>
+    </main>
 
     <footer>
-        <div class="container">
-            <h2>My social networks</h2>
-            <h2>Email newsletter</h2>
-            <h2>Images of the day</h2>
-            <div class="social-container">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor
-                    turpis, nullam congue convallis montes purus class tristique mollis
-                    velit, posuere libero netus sodales dictum habitasse cubilia odio.
-                </p>
-                <p>
-                    Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
-                    senectus consequat montes a ridiculus elementum natoque habitasse,
-                    volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
-                    nascetur nibh mauris...[ &rarr; ]
-                </p>
+      <div class="container">
+        <h2>My social networks</h2>
+        <h2>Email newsletter</h2>
+        <h2>Images of the day</h2>
+        <div class="social-container">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit porttitor
+            turpis, nullam congue convallis montes purus class tristique mollis
+            velit, posuere libero netus sodales dictum habitasse cubilia odio.
+          </p>
+          <p>
+            Lectus fermentum mattis eu blandit iaculis ullamcorper tristique
+            senectus consequat montes a ridiculus elementum natoque habitasse,
+            volutpat sem cum porta auctor vitae nisl magnis dignissim aenean
+            nascetur nibh mauris...[ &rarr; ]
+          </p>
 
-                <div class="social-icons">
-                    <a href="https://www.dribbble.com" target="_blank" aria-label="Dribbble">
-                        <i class="fa-brands fa-dribbble"></i>
-                    </a>
-                    <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
-                        <i class="fa-brands fa-square-facebook"></i>
-                    </a>
-                    <a href="https://plus.google.com" target="_blank" aria-label="Google Plus">
-                        <i class="fa-brands fa-google-plus-g"></i>
-                    </a>
-                    <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a href="https://twitter.com" target="_blank" aria-label="Twitter">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                    <a href="https://vk.com" target="_blank" aria-label="VK">
-                        <i class="fa-brands fa-vk"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="email-newsletter">
-                <p>Sign up for our email newsletter to find out all the news.</p>
-                <form>
-                    <input type="text" name="name" placeholder="Name">
-                    <input type="email" name="email" placeholder="Email">
-                    <button type="submit">SUBMIT</button>
-                </form>
-            </div>
+          <div class="social-icons">
+            <a
+              href="https://www.dribbble.com"
+              target="_blank"
+              aria-label="Dribbble"
+            >
+              <i class="fa-brands fa-dribbble"></i>
+            </a>
+            <a
+              href="https://www.facebook.com"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <i class="fa-brands fa-square-facebook"></i>
+            </a>
+            <a
+              href="https://plus.google.com"
+              target="_blank"
+              aria-label="Google Plus"
+            >
+              <i class="fa-brands fa-google-plus-g"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+            <a href="https://vk.com" target="_blank" aria-label="VK">
+              <i class="fa-brands fa-vk"></i>
+            </a>
+          </div>
+        </div>
+        <div class="email-newsletter">
+          <p>Sign up for our email newsletter to find out all the news.</p>
+          <form>
+            <input type="text" name="name" placeholder="Name" />
+            <input type="email" name="email" placeholder="Email" />
+            <button type="submit">SUBMIT</button>
+          </form>
+        </div>
 
-            <div class="gallery">
-                <div class="grid-container">
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_1.jpg" alt="Ocean View">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_2.jpg" alt="Lavender Fields">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_3.jpg" alt="Drawing Hands">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_4.jpg" alt="Forest at Sunrise">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_5.jpg" alt="Terrarium">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_6.jpg" alt="Network Visualization">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_7.jpg" alt="Hillside Under Cloudy Sky">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_8.jpg" alt="Building Facade">
-                    </div>
-                    <div class="grid-item">
-                        <img src="./materials/images/footer/footer_9.jpg" alt="Sunset Sky">
-                    </div>
-                </div>
+        <div class="gallery">
+          <div class="grid-container">
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_1.jpg"
+                alt="Ocean View"
+              />
             </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_2.jpg"
+                alt="Lavender Fields"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_3.jpg"
+                alt="Drawing Hands"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_4.jpg"
+                alt="Forest at Sunrise"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_5.jpg"
+                alt="Terrarium"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_6.jpg"
+                alt="Network Visualization"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_7.jpg"
+                alt="Hillside Under Cloudy Sky"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_8.jpg"
+                alt="Building Facade"
+              />
+            </div>
+            <div class="grid-item">
+              <img
+                src="./materials/images/footer/footer_9.jpg"
+                alt="Sunset Sky"
+              />
+            </div>
+          </div>
         </div>
-        <div class="container footer-contact">
-            <div class="contact-item">
-                <i class="fa-solid fa-phone-flip"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Give Us A call:</p>
-                    <p class="contact">+00 (123) 765 8765</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-envelope"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Send Us A Mail:</p>
-                    <p class="contact">myName@domain.com</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-clock"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Monday - Saturday:</p>
-                    <p class="contact">14.00am - 18.00pm</p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <i class="fa-solid fa-location-dot"></i>
-                <div class="contact-data">
-                    <p class="contact-header">Come Visit Us:</p>
-                    <p class="contact">Directions to my location</p>
-                </div>
-            </div>
+      </div>
+      <div class="container footer-contact">
+        <div class="contact-item">
+          <i class="fa-solid fa-phone-flip"></i>
+          <div class="contact-data">
+            <p class="contact-header">Give Us A call:</p>
+            <p class="contact">+00 (123) 765 8765</p>
+          </div>
         </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-envelope"></i>
+          <div class="contact-data">
+            <p class="contact-header">Send Us A Mail:</p>
+            <p class="contact">myName@domain.com</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-clock"></i>
+          <div class="contact-data">
+            <p class="contact-header">Monday - Saturday:</p>
+            <p class="contact">14.00am - 18.00pm</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="contact-data">
+            <p class="contact-header">Come Visit Us:</p>
+            <p class="contact">Directions to my location</p>
+          </div>
+        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
