web design image

--- a/PRA/web-design.html
+++ b/PRA/web-design.html
@@ -49,10 +49,235 @@
       </section>
     </header>
 
-    <main>
+    <main class="container">
       <article>
-        <section id=""></section>
+        <section id="web-design">
+          <h2 class="section-header">
+            Web Design: Shaping the Digital Experience
+          </h2>
+          <div class="content-container">
+            <div class="section-img">
+              <img src="./materials/images/blog_article.jpg" alt="" />
+              <p class="image-caption">A positive and energetic image</p>
+            </div>
+
+            <div class="section-image-text">
+              <p>
+                Web design, or WD, is the art and science of creating engaging
+                and user-friendly websites. In today's fast-paced digital world,
+                a well-designed website is like a virtual storefront, attracting
+                visitors and converting them into customers. The process of WD
+                involves a combination of design principles, coding languages
+                such as HTML and CSS, and a deep understanding of user behavior.
+              </p>
+              <p>
+                Web designers, often referred to as UX/UI designers, play a
+                crucial role in the online ecosystem. They strive to create
+                designs that are not only aesthetically pleasing but also
+                functional and intuitive. As the saying goes, "Good design is
+                obvious. Great design is transparent."
+              </p>
+              <p>
+                The world-renowned designer Dieter Rams once said, Weniger, aber
+                besser, which translates to Less, but better in German. This
+                philosophy applies to web design as well. Simplicity, clarity,
+                and efficiency are the cornerstones of effective design. Users
+                should navigate a website effortlessly, finding the information
+                they seek without unnecessary distractions.
+              </p>
+            </div>
+          </div>
+
+          <div class="review-content">
+            <p>“</p>
+            <p>
+              Responsive design, or RWD, is another essential aspect of modern
+              web design.
+            </p>
+          </div>
+
+          <div class="section-text">
+            <p>
+              With the proliferation of smartphones and tablets, websites must
+              adapt to various screen sizes and resolutions. RWD ensures that a
+              website looks and functions seamlessly on all devices, providing a
+              consistent user experience.
+            </p>
+
+            <p>
+              In the ever-evolving world of web design, consider these key
+              elements:
+            </p>
+          </div>
+
+          <div class="section-list">
+            <ul>
+              <li>
+                User-Centered Design: Prioritize the needs and preferences of
+                the end users.
+              </li>
+              <li>
+                Visual Hierarchy: Organize content to guide users' attention
+                effectively.
+              </li>
+              <li>
+                Typography: Choose fonts that are legible and align with the
+                brand's personality.
+              </li>
+              <li>
+                Color Psychology: Use colors to evoke emotions and create a
+                cohesive brand identity.
+              </li>
+              <li>
+                Navigation: Create intuitive menus and navigation paths for easy
+                exploration.
+              </li>
+              <li>
+                Performance Optimization: Ensure fast loading times and smooth
+                interactions.
+              </li>
+              <li>
+                Accessibility: Make websites accessible to all, including those
+                with disabilities.
+              </li>
+              <li>
+                Security: Protect user data and maintain a secure online
+                environment.
+              </li>
+              <li>
+                Search Engine Optimization (SEO): Optimize content for better
+                visibility on search engines.
+              </li>
+              <li>
+                Content Strategy: Deliver valuable and relevant content that
+                resonates with the target audience.
+              </li>
+            </ul>
+          </div>
+
+          <div class="section-text">
+            <p>
+              In conclusion, web design is a dynamic field that continues to
+              evolve as technology advances. The goal of every web designer is
+              to create digital experiences that captivate, inform, and inspire.
+            </p>
+
+            <p>
+              Remember, Simplicity is the ultimate sophistication, as da Vinci
+              famously said.
+            </p>
+          </div>
+        </section>
+
+        <section id="comments">
+          <h3>Comments</h3>
+
+          <div class="section-comments">
+            <div class="comment-container">
+              <div class="comment-data">
+                <div>
+                  <p class="name-data"><b>By</b> <u>A Name</u></p>
+                  <p class="date-data">Friday, 6th April 2045 @08:15:00</p>
+                </div>
+                <img src="./materials/images/avatar.png" alt="avatar" />
+              </div>
+              <p class="text-data">
+                This is an example of a comment made on a post. You can either
+                edit the comment, delete the comment or reply to the comment.
+                Use this as a place to respond to the post or to share what you
+                are thinking.
+              </p>
+            </div>
+
+            <div class="comment-container">
+              <div class="comment-data">
+                <div>
+                  <p class="name-data"><b>By</b> <u>A Name</u></p>
+                  <p class="date-data">Friday, 6th April 2045 @08:15:00</p>
+                </div>
+                <img src="./materials/images/avatar.png" alt="avatar" />
+              </div>
+              <p class="text-data">
+                This is an example of a comment made on a post. You can either
+                edit the comment, delete the comment or reply to the comment.
+                Use this as a place to respond to the post or to share what you
+                are thinking.
+              </p>
+            </div>
+
+            <div class="comment-container">
+              <div class="comment-data">
+                <div>
+                  <p class="name-data"><b>By</b> <u>A Name</u></p>
+                  <p class="date-data">Friday, 6th April 2045 @08:15:00</p>
+                </div>
+                <img src="./materials/images/avatar.png" alt="avatar" />
+              </div>
+              <p class="text-data">
+                This is an example of a comment made on a post. You can either
+                edit the comment, delete the comment or reply to the comment.
+                Use this as a place to respond to the post or to share what you
+                are thinking.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section id="form">
+          <h3>Write a Comment</h3>
+
+          <form action="submit" method="post">
+            <div class="group-inputs-flex">
+              <div class="label-flex">
+                <label for="name">Name*</label>
+                <input type="text" id="name" name="name" required />
+              </div>
+
+              <div class="label-flex">
+                <label for="email">Mail*</label>
+                <input type="email" id="email" name="email" required />
+              </div>
+
+              <div class="label-flex">
+                <label for="website">Website</label>
+                <input type="text" id="website" name="website" />
+              </div>
+            </div>
+
+            <div class="group-inputs-flex">
+              <div class="label-flex">
+                <label for="profile">Your Profile</label>
+                <select id="profile" name="profile">
+                  <option value="opcion1">Opción 1</option>
+                  <option value="opcion2">Opción 2</option>
+                  <option value="opcion3">Opción 3</option>
+                </select>
+              </div>
+
+              <div class="label-flex">
+                <label for="image">Your image</label>
+                <input type="file" id="image" name="image" />
+              </div>
+            </div>
+
+            <div class="label-flex">
+              <label for="comment">Your Comment</label>
+              <textarea
+                name="comment"
+                id="comment"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+
+            <div class="btn">
+              <button>Submit Form</button>
+              <button>Reset Form</button>
+            </div>
+          </form>
+        </section>
       </article>
+
       <aside>
         <h2>More on my blog</h2>
         <div class="aside-list">
