--- a/PRA/web-design.html
+++ b/PRA/web-design.html
@@ -64,11 +64,12 @@
             <div class="section-image-text">
               <p>
                 Web design, or WD, is the art and science of creating engaging
-                and user-friendly websites. In today's fast-paced digital world,
-                a well-designed website is like a virtual storefront, attracting
-                visitors and converting them into customers. The process of WD
-                involves a combination of design principles, coding languages
-                such as HTML and CSS, and a deep understanding of user behavior.
+                and user-friendly websites. In today's fast- paced digital
+                world, a well-designed website is like a virtual storefront,
+                attracting visitors and converting them into customers. The
+                process of WD involves a combination of design principles,
+                coding languages such as HTML and CSS, and a deep understanding
+                of user behavior.
               </p>
               <p>
                 Web designers, often referred to as UX/UI designers, play a
